# ARISA-MLOps-Assignment

./: .gitignore  01.ipynb  02.ipynb  Cargo.toml  Makefile  kaggle.json  pyproject.toml  readme.md  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: lint-code.yml  predict_on_model_change.yml  retrain_on_change.yml
ARISA_DSML/: config.py  helpers.py  predict.py  preproc.py  resolve.py  train.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/learn/: events.out.tfevents
catboost_info/fold-0/test/: events.out.tfevents
catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/learn/: events.out.tfevents
catboost_info/fold-1/test/: events.out.tfevents
catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-2/learn/: events.out.tfevents
catboost_info/fold-2/test/: events.out.tfevents
catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-3/learn/: events.out.tfevents
catboost_info/fold-3/test/: events.out.tfevents
catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-4/learn/: events.out.tfevents
catboost_info/fold-4/test/: events.out.tfevents
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
data/processed/: test.csv  train.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: best_params.pkl  catboost_model_heart.cbm  cv_results.csv  model_params.pkl  preds.csv
notebooks/: 01.ipynb  03-wk-model_refactored.ipynb  03.ipynb  04-wk-MLFlow.ipynb
results/: best_params.pkl  catboost_model_heart_disease.cbm  catboost_model_heart_disease_v2.cbm  cv_results_v2.csv  model_params.pkl  predictions.csv
src/: lib.rs
