[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ARISA_DSML"
version = "0.0.1"
description = "trying to predict heart disease"
authors = [
  { name = "Wojciech" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["ARISA_DSML"]
include = ["pyproject.toml", "ARISA_DSML/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ARISA_DSML"]
force-sort-within-sections = true

